Fix: Hide scrollbar if output is one line.

--- a/styles/hydrogen.less
+++ b/styles/hydrogen.less
@@ -55,6 +55,7 @@
         width: 100%;
         .bubble-output-container {
             padding: 0 2px 0 2px;
+            overflow: hidden;
             pre {
                 font-size: inherit;
                 line-height: inherit;
